# Nexus-AI

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
evals/: golden.jsonl
migrations/: env.py  script.py.mako
ops/: prometheus.yml
scripts/: make_token.py  prune_memories.py  run_evals.py  seed_demo.py
src/nexus/: __init__.py  _compat.py  config.py  observability.py
src/nexus/api/: auth.py  main.py  schemas.py  streaming.py
src/nexus/api/static/: index.html
src/nexus/code/: chunker.py  ingest.py
src/nexus/db/: models.py  session.py
src/nexus/embeddings/: __init__.py  base.py  hashing.py  voyage.py
src/nexus/evals/: metrics.py
src/nexus/llm/: __init__.py  anthropic_provider.py  base.py
src/nexus/memory/: decay.py  extractor.py  parsing.py  store.py  writer.py
src/nexus/orchestrator/: graph.py  router.py
src/nexus/rag/: chunker.py  fusion.py  grading.py  ingest.py  rerank.py  retriever.py  rewrite.py
tests/: test_auth.py  test_chunker.py  test_code_chunker.py  test_decay.py  test_eval_metrics.py  test_fusion.py  test_grading_parsing.py  test_llm_base_stream.py  test_memory_parsing.py  test_rerank_parsing.py  test_rewrite_parsing.py  test_router_parsing.py  test_streaming.py
